# aMessOfATestss

c_cpp/Qt/segmentedDisplay/: .gitignore  CMakeLists.txt  dialog.cpp  dialog.h  segmentDisplay.cpp  segmentDisplay.h
c_cpp/Qt/socketTcpClient/: CMakeLists.txt  client.cpp  client.h
c_cpp/Qt/socketTcpServer/: CMakeLists.txt  server.cpp  server.h
c_cpp/socket/clientToQt/: .gitignore  Makefile  socketClient.c
